worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tagthemall-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tagthemall-worker
  template:
    metadata:
      labels:
        app: tagthemall-worker
    spec:
      containers:
        - name: worker
          image: tagthemall-worker:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
