api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tagthemall-api
spec:
  selector:
    app: tagthemall-api
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
