worker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tagthemall-worker
spec:
  selector:
    app: tagthemall-worker
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
