tagthemall-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tagthemall
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  tls:
    - hosts:
        - tagthemall.com.ng
  rules:
    - host: tagthemall.com.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tagthemall-api
                port:
                  number: 5000
